# BioEvol

./: .gitignore  CMakeLists.txt  README.md  clean_cmake.sh  install_pygal.sh  main.cpp  run_cmake.sh  test_faible.py  test_fort.py
src/: Common.cpp  Common.h  Cuda.cu  Cuda.h  Organism.cpp  Organism.h  World.cpp  World.h  main.h
test/: Readme  test.py  test1-256.py  test16-64.py
test/output/: output_16to64_size128.csv  output_16to64_size32.csv  output_16to64_size64.csv  output_1to256_size32.csv  output_32to128_size32.csv
